# Flet_StoryBoard

./: .gitignore  DemoProj.fletsb  LICENSE  MANIFEST.in  README.md  __init__.py  myUI.fletsb  my_ui.fletsb  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: python-publish.yml
Flet_StoryBoard/: __init__.py  createStoryBoard.py  create_storyboard.py  edit.py  editStoryBoard.py  edit_storyboard.py  loadFletStoryboard.py  load_storyboard.py  pyodide.py
Flet_StoryBoard/Engines/: edit_control_engine.py  edit_subwidgets_engin.py  edit_widget_engine.py  preview_engine.py  suggesting_engine.py  viewer_engine.py
Flet_StoryBoard/Tools/: color_picker.py  create_storyboard.py  get_url_icon.py  list_picker.py  page_info.py  storyboard_class.py
Flet_StoryBoard/WIDGETS/: All.py
Flet_StoryBoard/built_in_widgets/: color_picker.py
Flet_StoryBoard/engines/: edit_widget_engine.py  viewer_engine.py
Flet_StoryBoard/pages/: controls_widgets_page.py  create_new_file.py  edit_controls_page.py  main_page.py  page_preview.py  settings.py  settings_page.py
Flet_StoryBoard/sections/: edit_section.py  left_section.py  preview_section.py
Flet_StoryBoard/tools/: all_controls.py  color_picker.py  create_storyboard.py  create_storyboard_file.py  storyboard_class.py
Flet_StoryBoard/ui_set/: pick_control_section.py
assets/: README.md
docs/: get_bard_token.md
fletsb/: __init__.py  __main__.py  application.py  edit.py  load_storyboard.py  production.py  storyboard.py
fletsb/editor_page/: main.py  (+2 more)
rules/: about_me page.json  about_me.json  all.json  signin_rules.json
(+103 files in other folders)
