[metadata]

name = Flet_StoryBoard
version = 0.2.4
author = "SKBarbon"
description = A UI-Tools to build a powerful flet front-end without coding it.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SKbarbon/Flet_StoryBoard
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = flet
include_package_data = True